[package]
name = "cmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
subprocess = "0.2.9"
toml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }